# haltyrka

./: .gitignore  .gitmodules  README.md  TODO.md  app.py  cipher.py  cipher_log.txt  logger.py
app/: app.py  launcher.py
app/static/js/: main.js
app/templates/: cipher_page.html  index.html
services/: cipher_service.py  logger_service.py
src/: package.json  requirements.txt
src/api/: config.py  index.py
src/api/assets/: safe.txt
src/api/core/: __init__.py
src/api/core/controllers/: encrypt_controller.py  history_controller.py  open_file_controller.py  save_result_controller.py
src/api/core/middlewares/: api_masking.py
src/api/core/routes/: __init__.py  encrypt_route.py  history_route.py  open_file_route.py  save_result_route.py
src/api/core/services/: atbash.py  caesar.py  logger.py  shifts.py  vigenere.py  xor.py
src/api/core/utils/: constants.py
src/app/: layout.tsx  page.tsx
src/app/cipher/[method]/: page.tsx
src/app/components/: LanguageSelector.tsx  MainCard.tsx  MethodSelector.tsx
src/app/components/icons/: Back.tsx  DropMenus.tsx
src/app/lib/: encrypt.ts  history.ts  open-file.ts
src/app/localization/: constants.ts  enums.ts  types.d.ts
src/app/utils/: notification.ts
templates/: cipher_page.html  index.html
v1.0/: launcher.spec  requirements.txt  safe.txt
v1.0/oldapp/: app.py  cipher.py  pyproject.toml  safe.txt
v1.0/oldapp/services/: logger_service.py
v1.0/oldapp/static/js/: main.js
v1.0/oldapp/templates/: cipher_page.html  index.html
