[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Nazar", email = "n.fundament@ugi.edu.ua" },
    { name = "Eduard", email = "e.kulaha@ugi.edu.ua" },
]
name = "haltyrka"
version = "1.0.0"
license = { text = "MIT" }
dependencies = ["flask", "PyQtWebEngine", "requests"]
